2001-12-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Henning Schmiedehausen <henning@forge.intermeta.de>

	* common-src/file.c (safe_cd): Create the AMANDA_DBGDIR and
	  AMANDA_TMPDIR directory.

2001-12-12  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amverify.sh.in: Check that @AMANDA_TMPDIR@ exist.
	* server-src/amrmtape.sh.in: Ditto.

2001-12-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/Makefile.am: fix setting of libexec_PROGRAMS.

2001-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Work with amflush log.

2001-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (nodump): new argument, Don't start the dumpers
	  if set.
	* server-src/holding.c (get_flush): chdir to original cwd.
	* server-src/reporter.c: accept driver and amflush line in log.
	* server-src/amflush.c: exec driver to do the flushing.

2001-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Fixup for estimate, write flush line.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c: You can change the tape device
	  between each tape.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* restore-src/amrestore.c (restore): try to find the next chunk 
	  in the current directory.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* example/amanda.conf.in: typo.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	Patch by Roland E. Lipovits <rel@lipo.at0.net>
	* example/amanda.conf.in: typo.

2001-12-04  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c, server-src/taper.c, server-src/chunker.c:
	Replace TRY_AGAIN by TRYAGAIN.

2001-11-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Michael D. Beynon <beynon@ll.mit.edu>

	* server-src/driver.c (main): Take care of empty tapeq.
